--- a/src/components/Sections/About.astro
+++ b/src/components/Sections/About.astro
@@ -6,10 +6,16 @@ const { summary } = basics
 
 ---
 
-<Section title="About">
+<Section title="Sobre mi">
 
-    <p>
+    <p class="summary">
         {summary}
     </p>
 
 </Section>
+
+<style>
+    .summary {
+        text-align: justify;
+    }
+</style>
