--- a/src/components/Sections/Experience.astro
+++ b/src/components/Sections/Experience.astro
@@ -3,7 +3,7 @@ import Section from "@/components/Section.astro"
 import { work } from "@cv"
 ---
 
-<Section title="Experiencie">
+<Section title="Experiencia">
 
     <ul>
 
