--- a/src/components/Sections/Projects.astro
+++ b/src/components/Sections/Projects.astro
@@ -4,7 +4,7 @@ import Section from "@/components/Section.astro"
 import { projects } from "@cv"
 ---
 
-<Section title="Project">
+<Section title="Proyectos">
 
     <ul>
         {
